<resources>
    <string name="app_name">SmartMirrorCapstone</string>
    <string name="Login">Login</string>
    <string name="mirror">Smart Mirror</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="mirrorViewSelect">Select a Mirror View</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="WhiteColor">#FFFFFF</string>
    <string name="smartmirroricon">SmartMirrorIcon</string>
    <string name="template1">Template1</string>
    <string name="template2">Template2</string>
    <string name="template3">Template3</string>
    <string name="template4">Template4</string>
    <string name="template5">template5</string>
    <string name="template6">template6</string>
    <string name="open_weather_maps_app_id">28b3d92963fef3ce6717737997d698b8</string>

    <string name="user_info_users">Users</string>
    <string name="confirm_password">Confirm\nPassword</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>
